Added translation (EN, PL)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <nav></nav>
   <main class="main">
     <section class="section">
+      <button><a href="https://mrpenguin-dev.github.io/Simple-Bible-Verses--EN/">EN</a></button>
+      <button><a href="https://mrpenguin-dev.github.io/Simple-Bible-Verses--PL/">PL</a></button>
       <h1 class="section--h1">Послание к Римлянам 10 (СИНОД)</h1>
       <p class="section--paragraph">12. Здесь нет различия между Иудеем и Еллином, потому что один Господь у всех, богатый для всех, призывающих Его.</p>
       <p class="section--paragraph section--bold">13. Ибо всякий, кто призовет имя Господне, спасется.</p>
