Added translation (UA)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <section class="section">
       <button><a href="https://mrpenguin-dev.github.io/Simple-Bible-Verses--EN/">EN</a></button>
       <button><a href="https://mrpenguin-dev.github.io/Simple-Bible-Verses--PL/">PL</a></button>
+      <button><a href="https://mrpenguin-dev.github.io/Simple-Bible-Verses--UA/">UA</a></button>
       <h1 class="section--h1">Послание к Римлянам 10:12-17 (СИНОД)</h1>
       <p class="section--paragraph">12. Здесь нет различия между Иудеем и Еллином, потому что один Господь у всех, богатый для всех, призывающих Его.</p>
       <p class="section--paragraph section--bold">13. Ибо всякий, кто призовет имя Господне, спасется.</p>
