--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-b--EN/">EN</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-b--PL/">PL</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-b--UA/">UA</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-o--RU/">O</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-r--RU/">R</a></button>
       <h1 class="section--h1">Послание к Римлянам 10:12-17 (СИНОД)</h1>
       <p class="section--paragraph">12. Здесь нет различия между Иудеем и Еллином, потому что один Господь у всех, богатый для всех, призывающих Его.</p>
       <p class="section--paragraph section--bold">13. Ибо всякий, кто призовет имя Господне, спасется.</p>
