--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-b--UA/">UA</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-r--RU/">R</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-o--RU/">O</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-g--RU/">G</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-g--RU/">Gr</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-grey--RU/">G</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-w--RU/">W</a></button>
       <h1 class="section--h1">Послание к Римлянам 10:12-17 (СИНОД)</h1>
-      <p class="section--paragraph">12. Здесь нет различия между Иудеем и Еллином, потому что один Господь у всех, богатый для всех, призывающих Его.</p>
-      <p class="section--paragraph section--bold">13. Ибо всякий, кто призовет имя Господне, спасется.</p>
-      <p class="section--paragraph section--bold">14. Но как призывать Того, в Кого не уверовали? как веровать в Того, о Ком не слыхали? как слышать без проповедующего? </p>
+      <p class="section--paragraph">12. <span class="section--bold">Здесь нет различия между Иудеем и Еллином</span>, <span class="section--bold">потому что один Господь у всех</span>, <span class="section--bold">богатый для всех</span>, <span class="section--bold">призывающих Его</span>.</p>
+      <p class="section--paragraph">13. <span class="section--bold">Ибо всякий</span>, <span class="section--bold">кто призовет имя Господне</span>, <span class="section--bold">спасется</span>.</p>
+      <p class="section--paragraph">14. <span class="section--bold">Но как призывать Того</span>, <span class="section--bold">в Кого не уверовали? как веровать в Того</span>, <span class="section--bold">о Ком не слыхали? как слышать без проповедующего?</span> </p>
       <p class="section--paragraph">15. И как проповедывать, если не будут посланы? как написано: как прекрасны ноги благовествующих мир, благовествующих благое!</p>
       <p class="section--paragraph">16. Но не все послушались благовествования. Ибо Исаия говорит: Господи! кто поверил слышанному от нас?</p>
-      <p class="section--paragraph">17. Итак вера от слышания, а слышание от слова Божия.</p>
+      <p class="section--paragraph">17. Итак <span class="section--bold">вера</span> от слышания, а слышание <span class="section--bold">от слова Божия</span>.</p>
     </section>
   </main>
 </body>
