--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body class="body">
   <main class="main">
     <section class="section">
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-b--EN/">EN</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-b--PL/">PL</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-b--UA/">UA</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-r--RU/">R</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-o--RU/">O</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-g--RU/">Gr</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-grey--RU/">G</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-w--RU/">W</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-b--EN/">EN</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-b--PL/">PL</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-b--UA/">UA</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-r--RU/">R</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-o--RU/">O</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-g--RU/">Gr</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-grey--RU/">G</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-w--RU/">W</a></button>
       <h1 class="section--h1">Послание к Римлянам 10:12-17 (СИНОД)</h1>
       <p class="section--paragraph">12. <span class="section--bold">Здесь нет различия между Иудеем и Еллином</span>, <span class="section--bold">потому что один Господь у всех</span>, <span class="section--bold">богатый для всех</span>, <span class="section--bold">призывающих Его</span>.</p>
       <p class="section--paragraph">13. <span class="section--bold">Ибо всякий</span>, <span class="section--bold">кто призовет имя Господне</span>, <span class="section--bold">спасется</span>.</p>
