--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-b--UA/">UA</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-r--RU/">R</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-o--RU/">O</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--RU/">SGWAq</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-g--RU/">Gr</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-grey--RU/">G</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-w--RU/">W</a></button>
