--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-b--ES/">ES</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-b--PL/">PL</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-b--UA/">UA</a></button>
-      <button class="section__button--underscore">__</button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-r--RU/">R</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-o--RU/">O</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sgwaq--RU/">SGWAq</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-g--RU/">Gr</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-grey--RU/">G</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-w--RU/">W</a></button>
+    </main>
+  </section>
+  <div class="div__underline--lightgrey"></div>
+  <main class="main">
+    <section class="section">
       <h1 class="section__h1">Послание к Римлянам 10:12-17 (СИНОД)</h1>
       <p class="section__paragraph">12. <span class="section--bold">Здесь нет различия между Иудеем и Еллином</span>, <span class="section--bold">потому что один Господь у всех</span>, <span class="section--bold">богатый для всех</span>, <span class="section--bold">призывающих Его</span>.</p>
       <p class="section__paragraph">13. <span class="section--bold">Ибо всякий</span>, <span class="section--bold">кто призовет имя Господне</span>, <span class="section--bold">спасется</span>.</p>
